[package]
name = "bittorrent-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aquatic_udp_protocol = "0.8.0"
bincode = "1.3.3"
byteorder = "1.5.0"
clap = { version = "4.4.8", features = ["derive"] }
futures-util = { version = "0.3.29", features = ["sink"] }
hex = "0.4.3"
kanal = "0.1.0-pre8"
rand = "0.8.5"
reqwest = "0.11.22"
serde = { version  = "1.0.193", features = ["derive"] }
serde_bencode = "0.2.4"
serde_urlencoded = "0.7"
sha1 = "0.10.6"
tokio = { version = "1.34.0", features = ["full"] }
urlencoding = "2.1.3"

[dev-dependencies]
actix-web = "4.0"
actix-rt = "2.5"
